--- a/packages.config
+++ b/packages.config
@@ -4,6 +4,10 @@
   <package id="curl.redist" version="7.30.0.2" targetFramework="native" />
   <package id="libiconv" version="1.14.0.11" targetFramework="native" />
   <package id="libiconv.redist" version="1.14.0.11" targetFramework="native" />
+  <package id="libimobiledevice" version="1.2.0.58" targetFramework="native" />
+  <package id="libimobiledevice.redist" version="1.2.0.58" targetFramework="native" />
+  <package id="libirecovery" version="0.1.1.14" targetFramework="native" />
+  <package id="libirecovery.redist" version="0.1.1.14" targetFramework="native" />
   <package id="libplist" version="1.12.49" targetFramework="native" />
   <package id="libplist.redist" version="1.12.49" targetFramework="native" />
   <package id="libssh2" version="1.4.3.1" targetFramework="native" />
