--- a/packages.config
+++ b/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="curl" version="7.30.0.2" targetFramework="native" />
   <package id="curl.redist" version="7.30.0.2" targetFramework="native" />
+  <package id="fix8.dependencies.getopt" version="1.0.20151130.1" targetFramework="native" />
   <package id="libiconv" version="1.14.0.11" targetFramework="native" />
   <package id="libiconv.redist" version="1.14.0.11" targetFramework="native" />
   <package id="libimobiledevice" version="1.2.0.58" targetFramework="native" />
