--- a/idevicerestore.vcxproj
+++ b/idevicerestore.vcxproj
@@ -72,18 +72,24 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <IncludePath>$(ProjectDir)src;$(ProjectDir)compat;$(IncludePath)</IncludePath>
     <LibraryPath>$(ProjectDir)packages\curl.7.30.0.2\build\native\lib\v110\Win32\Release\dynamic;$(LibraryPath)</LibraryPath>
+    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
+    <IntDir>$(SolutionDir)$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <IncludePath>$(ProjectDir)src;$(ProjectDir)compat;$(IncludePath)</IncludePath>
     <LibraryPath>$(ProjectDir)packages\curl.7.30.0.2\build\native\lib\v110\Win32\Release\dynamic;$(LibraryPath)</LibraryPath>
+    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
+    <IntDir>$(SolutionDir)$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IncludePath>$(ProjectDir)src;$(ProjectDir)compat;$(IncludePath)</IncludePath>
     <LibraryPath>$(ProjectDir)packages\curl.7.30.0.2\build\native\lib\v110\x64\Release\dynamic;$(LibraryPath)</LibraryPath>
+    <IntDir>$(SolutionDir)$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>$(ProjectDir)src;$(ProjectDir)compat;$(IncludePath)</IncludePath>
     <LibraryPath>$(ProjectDir)packages\curl.7.30.0.2\build\native\lib\v110\x64\Release\dynamic;$(LibraryPath)</LibraryPath>
+    <IntDir>$(SolutionDir)$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
