--- a/idevicerestore.vcxproj
+++ b/idevicerestore.vcxproj
@@ -258,4 +258,15 @@
     <Error Condition="!Exists('packages\fix8.dependencies.getopt.1.0.20151130.1\build\native\fix8.dependencies.getopt.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\fix8.dependencies.getopt.1.0.20151130.1\build\native\fix8.dependencies.getopt.props'))" />
     <Error Condition="!Exists('packages\fix8.dependencies.getopt.1.0.20151130.1\build\native\fix8.dependencies.getopt.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\fix8.dependencies.getopt.1.0.20151130.1\build\native\fix8.dependencies.getopt.targets'))" />
   </Target>
+  <ItemGroup>
+    <DynamicLibraries Include="$(ProjectDir)packages\libxml2.redist.2.7.8.7\build\native\bin\v110\$(Platform)\Release\dynamic\cdecl\libxml2.dll" />
+    <DynamicLibraries Include="$(ProjectDir)packages\curl.redist.7.30.0.2\build\native\bin\v110\$(Platform)\Release\dynamic\libcurl.dll" />
+    <DynamicLibraries Include="$(ProjectDir)packages\zlib.redist.1.2.8.7\build\native\bin\v120\$(Platform)\Release\dynamic\cdecl\zlib.dll" />
+    <DynamicLibraries Include="$(ProjectDir)packages\libiconv.redist.1.14.0.11\build\native\bin\v110\$(Platform)\Release\dynamic\cdecl\libiconv.dll" />
+    <DynamicLibraries Include="$(ProjectDir)packages\libssh2.redist.1.4.3.1\build\native\bin\v110\$(Platform)\Release\dynamic\cdecl\libssh2.dll" />
+
+  </ItemGroup>
+  <Target Name="AfterBuild">
+    <Copy SourceFiles="@(DynamicLibraries)" DestinationFolder="$(OutDir)" />
+  </Target>
 </Project>
