--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,14 +1,17 @@
+environment:
+  VCPKG_ROOT: C:\tools\vcpkg-libimobiledevice
+
 before_build:
-  - nuget restore
+  - vcpkg version
+  - git clone -q --depth 1 -b ports/libimobiledevice https://github.com/libimobiledevice-win32/vcpkg %VCPKG_ROOT%
+  - cmd: "%VCPKG_ROOT%\\bootstrap-vcpkg.bat"
+  - cmd: "%VCPKG_ROOT%\\vcpkg version"
+  - cmd: "%VCPKG_ROOT%\\vcpkg integrate install"
+  - cmd: "%VCPKG_ROOT%\\vcpkg install libimobiledevice:x86-windows curl:x86-windows"
+  - cmd: "%VCPKG_ROOT%\\vcpkg install libimobiledevice:x64-windows curl:x64-windows"
 
 build_script:
-  - msbuild idevicerestore.sln /p:Configuration=Debug /p:Platform=x86 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
-  - msbuild idevicerestore.sln /p:Configuration=Release /p:Platform=x86 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
+  - msbuild idevicerestore.sln /p:Configuration=Debug /p:Platform=Win32 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
+  - msbuild idevicerestore.sln /p:Configuration=Release /p:Platform=Win32 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
   - msbuild idevicerestore.sln /p:Configuration=Debug /p:Platform=x64 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
   - msbuild idevicerestore.sln /p:Configuration=Release /p:Platform=x64 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
-
-on_success:
-  - cmd: 7z a -tzip "idevicerestore-1.0.%APPVEYOR_BUILD_NUMBER%-windows-x86.zip" .\Win32\Release\*.exe .\Win32\Release\*.dll
-  - cmd: 7z a -tzip "idevicerestore-1.0.%APPVEYOR_BUILD_NUMBER%-windows-x64.zip" .\x64\Release\*.exe .\x64\Release\*.dll
-  - cmd: appveyor PushArtifact idevicerestore-1.0.%APPVEYOR_BUILD_NUMBER%-windows-x86.zip
-  - cmd: appveyor PushArtifact idevicerestore-1.0.%APPVEYOR_BUILD_NUMBER%-windows-x64.zip
