--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,6 +5,8 @@ variables:
   libusbmuxdPipeline: 3
   libimobiledeviceBuild: 66
   libimobiledevicePipeline: 4
+  libirecoveryBuild: 113
+  libirecoveryPipeline: 8
 
 jobs:
 - job: windows
@@ -30,7 +32,7 @@ jobs:
       vcpkg\vcpkg version
       vcpkg\vcpkg integrate install
       set VCPKG_BUILD_TYPE=release
-      vcpkg\vcpkg install libplist:%BUILD_ARCH%-windows libusbmuxd:%BUILD_ARCH%-windows libimobiledevice:%BUILD_ARCH%-windows --head
+      vcpkg\vcpkg install libplist:%BUILD_ARCH%-windows libusbmuxd:%BUILD_ARCH%-windows libimobiledevice:%BUILD_ARCH%-windows libirecovery:%BUILD_ARCH%-windows --head
       vcpkg\vcpkg install curl:%BUILD_ARCH%-windows libzip:%BUILD_ARCH%-windows
     displayName: Install native dependencies
   - task: MSBuild@1
@@ -48,7 +50,6 @@ jobs:
   - script: |
       mkdir %BUILD_ARTIFACTSTAGINGDIRECTORY%\idevicerestore\%RID%\bin\
       copy %PLATFORM%\Release\*.exe %BUILD_ARTIFACTSTAGINGDIRECTORY%\idevicerestore\%RID%\bin\
-      copy vcpkg\installed\%BUILD_ARCH%-windows\bin\libzip.dll %BUILD_ARTIFACTSTAGINGDIRECTORY%\idevicerestore\%RID%\bin\
     displayName: 'Install'
   - task: PublishBuildArtifacts@1
     inputs:
@@ -97,6 +98,17 @@ jobs:
       artifactName: 'libimobiledevice'
       downloadPath: '$(System.ArtifactsDirectory)'
     displayName: 'Download libimobiledevice artifacts'
+  - task: DownloadBuildArtifacts@0
+    inputs:
+      buildType: 'specific'
+      project: 'imobiledevice-net'
+      pipeline: $(libirecoveryPipeline)
+      buildVersionToDownload: 'specific'
+      buildId: $(libirecoveryBuild)
+      downloadType: 'single'
+      artifactName: 'libirecovery'
+      downloadPath: '$(System.ArtifactsDirectory)'
+    displayName: 'Download libirecovery artifacts'
   - script: |
       brew install autoconf automake libtool pkg-config openssl libzip
     displayName: Install autotools, openSSL
@@ -104,6 +116,7 @@ jobs:
       export PKG_CONFIG_PATH="$SYSTEM_ARTIFACTSDIRECTORY/libplist/$RID/lib/pkgconfig:$PKG_CONFIG_PATH"
       export PKG_CONFIG_PATH="$SYSTEM_ARTIFACTSDIRECTORY/libusbmuxd/$RID/lib/pkgconfig:$PKG_CONFIG_PATH"
       export PKG_CONFIG_PATH="$SYSTEM_ARTIFACTSDIRECTORY/libimobiledevice/$RID/lib/pkgconfig:$PKG_CONFIG_PATH"
+      export PKG_CONFIG_PATH="$SYSTEM_ARTIFACTSDIRECTORY/libirecovery/$RID/lib/pkgconfig:$PKG_CONFIG_PATH"
       export PKG_CONFIG_PATH="$(brew --prefix)/opt/openssl/lib/pkgconfig:$PKG_CONFIG_PATH"
 
       ./autogen.sh --prefix=$BUILD_ARTIFACTSTAGINGDIRECTORY/idevicerestore/$RID --host=$TARGET
@@ -160,13 +173,25 @@ jobs:
       artifactName: 'libimobiledevice'
       downloadPath: '$(System.ArtifactsDirectory)'
     displayName: 'Download libimobiledevice artifacts'
+  - task: DownloadBuildArtifacts@0
+    inputs:
+      buildType: 'specific'
+      project: 'imobiledevice-net'
+      pipeline: $(libirecoveryPipeline)
+      buildVersionToDownload: 'specific'
+      buildId: $(libirecoveryBuild)
+      downloadType: 'single'
+      artifactName: 'libirecovery'
+      downloadPath: '$(System.ArtifactsDirectory)'
+    displayName: 'Download libirecovery artifacts'
   - script: |
-      sudo apt-get install -y libssl-dev libzip-dev libcurl4-openssl-dev
+      sudo apt-get install -y libssl-dev libzip-dev libcurl4-openssl-dev libusb-1.0-0-dev
     displayName: Install autotools, openSSL
   - script: |
       export PKG_CONFIG_PATH="$SYSTEM_ARTIFACTSDIRECTORY/libplist/$RID/lib/pkgconfig:$PKG_CONFIG_PATH"
       export PKG_CONFIG_PATH="$SYSTEM_ARTIFACTSDIRECTORY/libusbmuxd/$RID/lib/pkgconfig:$PKG_CONFIG_PATH"
       export PKG_CONFIG_PATH="$SYSTEM_ARTIFACTSDIRECTORY/libimobiledevice/$RID/lib/pkgconfig:$PKG_CONFIG_PATH"
+      export PKG_CONFIG_PATH="$SYSTEM_ARTIFACTSDIRECTORY/libirecovery/$RID/lib/pkgconfig:$PKG_CONFIG_PATH"
 
       ./autogen.sh --prefix=$BUILD_ARTIFACTSTAGINGDIRECTORY/idevicerestore/$RID --host=$TARGET
       make
