Fix libssl-1.1 dependency

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,11 +1,11 @@
 variables:
-  libplistBuild: 56
+  libplistBuild: 281
   libplistPipeline: 2
-  libusbmuxdBuild: 57
+  libusbmuxdBuild: 283
   libusbmuxdPipeline: 3
-  libimobiledeviceBuild: 66
+  libimobiledeviceBuild: 291
   libimobiledevicePipeline: 4
-  libirecoveryBuild: 113
+  libirecoveryBuild: 294
   libirecoveryPipeline: 8
 
 jobs:
@@ -140,6 +140,13 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
+  - script: |
+      lsb_release -a
+      sudo apt-get remove -y libssl1.1 ant
+      sudo apt-get install -y software-properties-common
+      sudo add-apt-repository --remove -y ppa:ondrej/php
+      sudo apt-get update
+    displayName: Check Ubuntu version, remove non-standard libssl1.1
   - task: DownloadBuildArtifacts@0
     inputs:
       buildType: 'specific'
