--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ jobs:
     vmImage: 'vs2017-win2016'
   steps:
   - script: |
-      git clone https://github.com/microsoft/vcpkg
+      git clone https://github.com/libimobiledevice-win32/vcpkg
       vcpkg\bootstrap-vcpkg.bat
     displayName: Install vcpkg
   - script: |
@@ -199,6 +199,9 @@ jobs:
       export PKG_CONFIG_PATH="$SYSTEM_ARTIFACTSDIRECTORY/libusbmuxd/$RID/lib/pkgconfig:$PKG_CONFIG_PATH"
       export PKG_CONFIG_PATH="$SYSTEM_ARTIFACTSDIRECTORY/libimobiledevice/$RID/lib/pkgconfig:$PKG_CONFIG_PATH"
       export PKG_CONFIG_PATH="$SYSTEM_ARTIFACTSDIRECTORY/libirecovery/$RID/lib/pkgconfig:$PKG_CONFIG_PATH"
+
+      cp $SYSTEM_ARTIFACTSDIRECTORY/libusbmuxd/$RID/lib/libusbmuxd.so $SYSTEM_ARTIFACTSDIRECTORY/libimobiledevice/$RID/lib
+      cp $SYSTEM_ARTIFACTSDIRECTORY/libplist/$RID/lib/libplist.so $SYSTEM_ARTIFACTSDIRECTORY/libimobiledevice/$RID/lib
 
       ./autogen.sh --prefix=$BUILD_ARTIFACTSTAGINGDIRECTORY/idevicerestore/$RID --host=$TARGET
       make
