--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,11 +1,11 @@
 variables:
-  libplistBuild: 281
+  libplistBuild: 383
   libplistPipeline: 2
-  libusbmuxdBuild: 283
+  libusbmuxdBuild: 390
   libusbmuxdPipeline: 3
-  libimobiledeviceBuild: 291
+  libimobiledeviceBuild: 395
   libimobiledevicePipeline: 4
-  libirecoveryBuild: 294
+  libirecoveryBuild: 323
   libirecoveryPipeline: 8
 
 jobs:
@@ -113,11 +113,28 @@ jobs:
       brew install autoconf automake libtool pkg-config openssl libzip
     displayName: Install autotools, openSSL
   - script: |
+      # Patch the pkg-config files. The path to the artifacts directory includes the version number of the
+      # VSTS agent, which may change.
+      LC_CTYPE=C LANG=C find $SYSTEM_ARTIFACTSDIRECTORY/libplist/$RID/lib/pkgconfig -name '*.pc' -print0 | xargs -0 sed -i -e "s@/Users/vsts/agent/[0-9]*\.[0-9]*\.[0-9]*/work/1/a/@$BUILD_ARTIFACTSTAGINGDIRECTORY/@g"
+      LC_CTYPE=C LANG=C find $SYSTEM_ARTIFACTSDIRECTORY/libusbmuxd/$RID/lib/pkgconfig -name '*.pc' -print0 | xargs -0 sed -i -e "s@/Users/vsts/agent/[0-9]*\.[0-9]*\.[0-9]*/work/1/a/@$BUILD_ARTIFACTSTAGINGDIRECTORY/@g"
+      LC_CTYPE=C LANG=C find $SYSTEM_ARTIFACTSDIRECTORY/libimobiledevice/$RID/lib/pkgconfig -name '*.pc' -print0 | xargs -0 sed -i -e "s@/Users/vsts/agent/[0-9]*\.[0-9]*\.[0-9]*/work/1/a/@$BUILD_ARTIFACTSTAGINGDIRECTORY/@g"
+      LC_CTYPE=C LANG=C find $SYSTEM_ARTIFACTSDIRECTORY/libirecovery/$RID/lib/pkgconfig -name '*.pc' -print0 | xargs -0 sed -i -e "s@/Users/vsts/agent/[0-9]*\.[0-9]*\.[0-9]*/work/1/a/@$BUILD_ARTIFACTSTAGINGDIRECTORY/@g"
+
+      LC_CTYPE=C LANG=C find $SYSTEM_ARTIFACTSDIRECTORY/libplist/$RID/lib/ -name '*.la' -print0 | xargs -0 sed -i -e "s@/Users/vsts/agent/[0-9]*\.[0-9]*\.[0-9]*/work/1/a/@$BUILD_ARTIFACTSTAGINGDIRECTORY/@g"
+      LC_CTYPE=C LANG=C find $SYSTEM_ARTIFACTSDIRECTORY/libusbmuxd/$RID/lib/ -name '*.la' -print0 | xargs -0 sed -i -e "s@/Users/vsts/agent/[0-9]*\.[0-9]*\.[0-9]*/work/1/a/@$BUILD_ARTIFACTSTAGINGDIRECTORY/@g"
+      LC_CTYPE=C LANG=C find $SYSTEM_ARTIFACTSDIRECTORY/libimobiledevice/$RID/lib/ -name '*.la' -print0 | xargs -0 sed -i -e "s@/Users/vsts/agent/[0-9]*\.[0-9]*\.[0-9]*/work/1/a/@$BUILD_ARTIFACTSTAGINGDIRECTORY/@g"
+      LC_CTYPE=C LANG=C find $SYSTEM_ARTIFACTSDIRECTORY/libirecovery/$RID/lib/ -name '*.la' -print0 | xargs -0 sed -i -e "s@/Users/vsts/agent/[0-9]*\.[0-9]*\.[0-9]*/work/1/a/@$BUILD_ARTIFACTSTAGINGDIRECTORY/@g"
+
       export PKG_CONFIG_PATH="$SYSTEM_ARTIFACTSDIRECTORY/libplist/$RID/lib/pkgconfig:$PKG_CONFIG_PATH"
       export PKG_CONFIG_PATH="$SYSTEM_ARTIFACTSDIRECTORY/libusbmuxd/$RID/lib/pkgconfig:$PKG_CONFIG_PATH"
       export PKG_CONFIG_PATH="$SYSTEM_ARTIFACTSDIRECTORY/libimobiledevice/$RID/lib/pkgconfig:$PKG_CONFIG_PATH"
       export PKG_CONFIG_PATH="$SYSTEM_ARTIFACTSDIRECTORY/libirecovery/$RID/lib/pkgconfig:$PKG_CONFIG_PATH"
       export PKG_CONFIG_PATH="$(brew --prefix)/opt/openssl/lib/pkgconfig:$PKG_CONFIG_PATH"
+
+      pkg-config --variable=prefix libplist
+      pkg-config --variable=prefix libusbmuxd
+      pkg-config --variable=prefix libimobiledevice-1.0
+      pkg-config --variable=prefix libirecovery
 
       ./autogen.sh --prefix=$BUILD_ARTIFACTSTAGINGDIRECTORY/idevicerestore/$RID --host=$TARGET
       make
